[package]
# Edici贸n de Rust utilizada para el paquete.
edition = "2021"
# Nombre del paquete.
name = "Hellsgate"
# Versi贸n del paquete.
version = "0.1.0"

[dependencies]
# Dependencia para decodificar base64
base64 = "0.21"
# Dependencia para trabajar con cadenas de caracteres anchas (wide strings), comunes en Windows.
widestring = "1.2.0"
# Dependencia principal para interactuar con las API de Windows.
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader"
] }


[build-dependencies]
# Dependencia para compilar c贸digo C/C++/Ensamblador (usado para la toolchain MSVC).
cc = "1.2"
# Dependencia para compilar c贸digo ensamblador con NASM (usado para la toolchain GNU).
nasm-rs = "0.3"